--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-google-button": "^0.8.0",
     "react-hook-form": "^7.51.4",
+    "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
